<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.travismadill.passgen.MainActivity">

    <!-- This layout is for making sure the keyboard doesn't suddenly appear on startup -->
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp">

        <EditText
            android:id="@+id/box_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/txt_passbox"
            android:selectAllOnFocus="true"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btn_generate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_generate"
            android:onClick="generate_onclick"/>
        <Button
            android:id="@+id/btn_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_copy"
            android:onClick="copy_onclick"/>
    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:id="@+id/lbl_genoptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lbl_generation_options" />
        
        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/txt_passlength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/lbl_pass_length"
                android:inputType="number"
                android:text="@string/pass_length" />

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chk_caps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:checked="true"
                android:text="@string/lbl_caps"
                android:textAlignment="viewStart" />

            <CheckBox
                android:id="@+id/chk_lower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:checked="true"
                android:text="@string/lbl_lowers"
                android:textAlignment="viewStart" />

            <CheckBox
                android:id="@+id/chk_nums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:checked="true"
                android:text="@string/lbl_nums"
                android:textAlignment="viewStart" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/chk_specials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:layout_gravity="center_horizontal"
                android:checked="true"
                android:onClick="chk_specials_onClick"
                android:text="@string/lbl_specials"  />

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/txt_specialChars"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/lbl_use_these_chars"
                    android:inputType="textNoSuggestions"
                    android:text="@string/special_characters" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
